--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -26,6 +26,8 @@
 	<string>$(PRODUCT_COPYRIGHT)</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
+  <key>NSMotionUsageDescription</key>
+  <string>This app requires access to the barometer to provide altitude information.</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
