--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   overlay_support: ^2.1.0
   audioplayers: ^6.1.0
   catppuccin_flutter: ^1.0.0
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
