--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
   esense_flutter:
-    git:
-      url: https://github.com/Yusuf-Duran/esense_flutter
-      ref: main
+    ^1.0.0
+    # git:
+    #   url: https://github.com/Yusuf-Duran/esense_flutter
+    #   ref: main
   permission_handler: ^11.3.1
 
   # The following adds the Cupertino Icons font to your application.
@@ -45,6 +46,7 @@ dependencies:
   audioplayers: ^6.1.0
   catppuccin_flutter: ^1.0.0
   http: ^1.2.2
+  flutter_bluetooth_serial: ^0.4.0
 
 dev_dependencies:
   flutter_test:
